--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-transformer-sharp": "^5.13.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "sass": "^1.76.0"
