--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.4",
+    "react-responsive": "^10.0.0",
     "sass": "^1.76.0"
   }
 }
