--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^2.2.2",
+    "@react-google-maps/api": "^2.20.6",
     "@tsparticles/engine": "^3.7.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.7.1",
+    "framer-motion": "^12.9.4",
     "gatsby": "^5.14.3",
     "gatsby-plugin-google-tagmanager": "^5.13.1",
     "gatsby-plugin-image": "^3.13.1",
