--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^2.2.2",
+    "@loadable/component": "^5.16.4",
     "@react-google-maps/api": "^2.20.6",
     "@tsparticles/engine": "^3.7.1",
     "@tsparticles/react": "^3.0.0",
